--- a/src/Blazor.Server.UI/Pages/Mobile/Trip/Scan.razor
+++ b/src/Blazor.Server.UI/Pages/Mobile/Trip/Scan.razor
@@ -1,4 +1,11 @@
-﻿@page "/mobile/scan"
+﻿@page "/mobile/scan/{RouteId:int}"
+@using CleanArchitecture.Blazor.Application.Features.Students.Queries.GetById
+@using CleanArchitecture.Blazor.Application.Features.TransportLogs.Commands.Create
+@using CleanArchitecture.Blazor.Application.Features.TripReports.Commands.Accident
+@using CleanArchitecture.Blazor.Application.Features.TripReports.Commands.GetOnOff
+@using CleanArchitecture.Blazor.Application.Features.TripReports.DTOs
+@using CleanArchitecture.Blazor.Application.Features.TripReports.Queries.GetById
+@using CleanArchitecture.Blazor.Application.Services
 @using GoogleMapsComponents
 @using GoogleMapsComponents.Maps
 @using Html5QrcodeBlazor.Wrapper
@@ -8,61 +15,34 @@
 @inject IBrowserViewportService BrowserViewportService
 @implements IAsyncDisposable
 @implements IBrowserViewportObserver
+@inject IGeolocationService geolocation
+@inject IGeoAddressService addressService
 <PageTitle>General information</PageTitle>
 
 <MudPaper Elevation="0" Class="d-flex flex-column justify-space-between flex-grow-1 pa-4 mt-10 gap-4">
-    <div class="d-flex flex-row justify-space-between align-center gap-1">
-        <div class="d-flex flex-column justify-space-between my-2  gap-1">
-            <MudText Typo="Typo.h6">General information</MudText>
-            <div class="d-flex flex-row align-center   gap-1">
-                <MudIcon Icon="@Icons.Material.Filled.DirectionsBus" Title="bus no." />
-                <MudText Typo="Typo.body2">School bus #1 - 69-929L </MudText>
-            </div>
-            <div class="d-flex flex-row align-center   gap-1">
-                <MudIcon Icon="@Icons.Material.Filled.AccountCircle" Title="driver" />
-                <MudText Typo="Typo.body2">Driver: John Anderson </MudText>
-            </div>
-        </div>
-        <div class="d-flex flex-column">
-            <MudText Typo="Typo.h3">09:41:17 AM</MudText>
-            <div class="d-flex flex-row align-center   gap-1 ">
-                <MudIcon Icon="@Icons.Material.Filled.CalendarMonth" Title="date" />
-                <MudText Typo="Typo.body2">Monday. June 6 </MudText>
-            </div>
-        </div>
-    </div>
-    <div class="d-flex flex-column">
-        <MudText Typo="Typo.h6">Route information</MudText>
-        <div class="d-flex flex-row justify-space-between align-center   gap-2">
-            <MudTextField @bind-Value="start" Label="start location" Variant="Variant.Outlined"></MudTextField>
-            <MudIcon Size="Size.Large" Icon="@Icons.Material.Filled.Route" Title="route" />
-            <MudTextField @bind-Value="final" Label="final location" Variant="Variant.Outlined"></MudTextField>
-        </div>
-    </div>
+    @if (_tripReport is null)
+    {
+        <MudProgressLinear Color="Color.Primary" Indeterminate="true" Class="my-7" />
+    }
+    else
+    {
+        <GeneralInformation Data="@_tripReport"></GeneralInformation>
+    }
     <div class="d-flex flex-row justify-space-between align-center gap-2">
         <div class="d-flex flex-column my-2 gap-1">
             <MudText Typo="Typo.h6">Total passengers on board</MudText>
             <MudTextField @bind-Value="search" Label="Search" Variant="Variant.Outlined" Adornment="Adornment.End" AdornmentIcon="@Icons.Material.Filled.Search" AdornmentColor="Color.Secondary" />
         </div>
-        <MudPaper Elevation="0" Class="pa-3" Style="height:80px; width:160px;">
-            <div class="d-lg-block mud-theme-tertiary rounded px-4" style="height:100%; width:100%;"><MudText Typo="Typo.h3">20</MudText></div>
-        </MudPaper>
+        <StudentOnBoardTotalCard @ref="@totalCard" RouteId="@RouteId"></StudentOnBoardTotalCard>
     </div>
     <div class="cameracontainer pa-0 d-flex flex-column align-center">
-
-        <MudPaper Elevation="0" Class="pa-2 d-flex" Style="height:60px; width:800px;">
-            <div class="d-lg-block mud-theme-tertiary rounded px-4" style="height:100%; width:100%;">
-                <MudText Typo="Typo.h4"  Align="Align.Center">@foundBarcode</MudText>
-            </div>
-        </MudPaper>
-        <MudButton Href="/mobile/scanconfirm">Confirm</MudButton>
-        <div id="reader" class="mx-auto my-0" style="width:880px">
+        <div id="reader" class="mx-auto my-0" style="width:700px">
         </div>
-       
+
     </div>
 </MudPaper>
 <style>
-    button.html5-qrcode-element{
+    button.html5-qrcode-element {
         color: var(--mud-palette-text-primary);
         border: 1px solid var(--mud-palette-text-primary);
         padding: 5px 15px;
@@ -77,10 +57,12 @@
         box-sizing: border-box;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
         border-radius: var(--mud-default-borderradius);
-    
     }
 </style>
 @code {
+    [Parameter]
+    public int RouteId { get; set; }
+    private StudentOnBoardTotalCard totalCard;
     private int _width = 0;
     private int _height = 0;
     private int scanwith = 650;
@@ -93,7 +75,15 @@
     private GoogleMap? _map1;
     private MapOptions _mapOptions;
     private DirectionsRenderer _dirRend;
-    protected override void OnInitialized()
+    private TripReportDto? _tripReport = null;
+    readonly PositionOptions _options = new()
+        {
+            EnableHighAccuracy = true,
+            MaximumAge = null,
+            Timeout = 15_000
+        };
+
+    protected override async Task OnInitializedAsync()
     {
         _mapOptions = new MapOptions()
             {
@@ -105,7 +95,17 @@
                 },
                 MapTypeId = MapTypeId.Roadmap
             };
+        await LoadRoute();
     }
+    private async Task LoadRoute()
+    {
+        _tripReport = await Mediator.Send(new GetTripReportByIdQuery() { Id = RouteId });
+    }
+    double _watchId;
+    GeolocationPositionError? _positionError;
+    GeolocationPosition? _position;
+    bool _isLoading;
+    private string? _location;
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         if (firstRender)
@@ -113,13 +113,33 @@
             await BrowserViewportService.SubscribeAsync(this, fireImmediately: true);
             cameraBarcodeReader.OnBarcodeScan += HandleBarcodeScanDebounced;
             await cameraBarcodeReader.Render();
+            _watchId = await geolocation.WatchPositionAsync(
+           component: this,
+           onSuccessCallbackMethodName: nameof(OnPositionRecieved),
+           onErrorCallbackMethodName: nameof(OnPositionError),
+           options: _options);
+
             await InvokeAsync(StateHasChanged);
         }
     }
+    [JSInvokable]
+    public async void OnPositionRecieved(GeolocationPosition position)
+    {
+        _isLoading = false;
+        _position = position;
+        _location = await addressService.GetAddress(position.Coords.Latitude, position.Coords.Longitude);
+        StateHasChanged();
+    }
 
+    [JSInvokable]
+    public void OnPositionError(GeolocationPositionError positionError)
+    {
+        _isLoading = false;
+        _positionError = positionError;
+        StateHasChanged();
+    }
     private async Task OnAfterInitAsync()
     {
-        //Create instance of DirectionRenderer
         _dirRend = await DirectionsRenderer.CreateAsync(_map1.JsRuntime, new DirectionsRendererOptions()
             {
                 Map = _map1.InteropObject
@@ -130,14 +150,55 @@
         if (processingScan)
             return;
         processingScan = true;
+        foundBarcode = barcode;
+        await InvokeAsync(StateHasChanged);
         await HandleBarcodeScan(barcode);
         await Task.Delay(1500);
-        processingScan = false;
+        await InvokeAsync(StateHasChanged);
     }
     public async Task HandleBarcodeScan(string barcode)
     {
-        foundBarcode = barcode.Trim();
-        await InvokeAsync(StateHasChanged);
+        var checkresult = await Mediator.Send(new GetStudentByUIdQuery(barcode, _tripReport.TenantId));
+
+        var options = new DialogOptions { NoHeader = true, DisableBackdropClick=true, CloseOnEscapeKey=false, CloseButton = false, MaxWidth = MaxWidth.Small, FullWidth = true };
+        var parameters = new DialogParameters<SutdentConfrmDialog>
+            {
+                { x => x.Successfull, checkresult.Succeeded },
+                { x => x.StudentDto,checkresult.Data  },
+                { x => x.Position,_position  },
+                { x => x.Location,_location  },
+                { x => x.TripReportDto,_tripReport  },
+                { x => x.QRCode,barcode  },
+            };
+        var dialog = DialogService.Show<SutdentConfrmDialog>("", parameters, options);
+        var state = await dialog.Result;
+
+        if (state.Canceled)
+        {
+            await Task.Delay(200);
+            var reportIncident = new AddAccidentCommand(_tripReport.Id, _tripReport.TenantId);
+            reportIncident.ReportDateTime = DateTime.Now;
+            reportIncident.StudentId = checkresult.Data?.Id;
+            reportIncident.Latitude = _position.Coords.Latitude;
+            reportIncident.Longitude = _position.Coords.Longitude;
+            reportIncident.Location = _location;
+            var options1 = new DialogOptions { NoHeader = false, DisableBackdropClick = true, CloseOnEscapeKey = false, CloseButton = false, MaxWidth = MaxWidth.Small, FullWidth = true };
+            var parameters1 = new DialogParameters<ReportIncidentDialog>
+            {
+                { x => x.Model, reportIncident },
+                { x => x.DriverName, _tripReport.Driver?.DisplayName },
+                { x => x.Route, $"{_tripReport.Itinerary?.StartingStation} - {_tripReport.Itinerary?.TerminalStation}" },
+                { x => x.SchoolName, $"{_tripReport.Itinerary?.School?.Name}" },
+                { x => x.StudentName, checkresult.Data?.DisplayName },
+                { x => x.Grade, checkresult.Data?.Grade },
+            };
+            var dialog1 = DialogService.Show<ReportIncidentDialog>("Report Incident", parameters1, options1);
+            var state1 = await dialog1.Result;
+        }
+        processingScan = false;
+        await totalCard.Refresh();
+
+
     }
     Task IBrowserViewportObserver.NotifyBrowserViewportChangeAsync(BrowserViewportEventArgs browserViewportEventArgs)
     {
@@ -166,5 +227,6 @@
 
         cameraBarcodeReader.OnBarcodeScan -= HandleBarcodeScanDebounced;
         await cameraBarcodeReader.Stop();
+        await geolocation.ClearWatchAsync(_watchId);
     }
 }
