--- a/src/Blazor.Server.UI/Pages/Mobile/Trip/PassengerList.razor
+++ b/src/Blazor.Server.UI/Pages/Mobile/Trip/PassengerList.razor
@@ -1,4 +1,6 @@
-﻿@page "/mobile/passengerlist"
+﻿@page "/mobile/passengerlist/{RouteId:int}"
+@using CleanArchitecture.Blazor.Application.Features.TripReports.DTOs
+@using CleanArchitecture.Blazor.Application.Features.TripReports.Queries.GetById
 @inject NavigationManager NavigationManager
 @inject IDialogService DialogService
 @inject ISnackbar Snackbar
@@ -8,34 +10,14 @@
 <PageTitle>General information</PageTitle>
 
 <MudPaper Elevation="0" Class="d-flex flex-column justify-space-between flex-grow-1 pa-4 mt-10 gap-4">
-    <div class="d-flex flex-row justify-space-between align-center gap-1">
-        <div class="d-flex flex-column justify-space-between my-2  gap-1">
-            <MudText Typo="Typo.h6">General information</MudText>
-            <div class="d-flex flex-row align-center   gap-1">
-                <MudIcon Icon="@Icons.Material.Filled.DirectionsBus" Title="bus no." />
-                <MudText Typo="Typo.body2">School bus #1 - 69-929L </MudText>
-            </div>
-            <div class="d-flex flex-row align-center   gap-1">
-                <MudIcon Icon="@Icons.Material.Filled.AccountCircle" Title="driver" />
-                <MudText Typo="Typo.body2">Driver: John Anderson </MudText>
-            </div>
-        </div>
-        <div class="d-flex flex-column">
-            <MudText Typo="Typo.h3">09:41:17 AM</MudText>
-            <div class="d-flex flex-row align-center   gap-1 ">
-                <MudIcon Icon="@Icons.Material.Filled.CalendarMonth" Title="date" />
-                <MudText Typo="Typo.body2">Monday. June 6 </MudText>
-            </div>
-        </div>
-    </div>
-    <div class="d-flex flex-column">
-        <MudText Typo="Typo.h6">Route information</MudText>
-        <div class="d-flex flex-row justify-space-between align-center   gap-2">
-            <MudTextField @bind-Value="start" Label="start location" Variant="Variant.Outlined"></MudTextField>
-            <MudIcon Size="Size.Large" Icon="@Icons.Material.Filled.Route" Title="route" />
-            <MudTextField @bind-Value="final" Label="final location" Variant="Variant.Outlined"></MudTextField>
-        </div>
-    </div>
+    @if (_tripReport is null)
+    {
+        <MudProgressLinear Color="Color.Primary" Indeterminate="true" Class="my-7" />
+    }
+    else
+    {
+        <GeneralInformation Data="@_tripReport"></GeneralInformation>
+    }
     <div class="d-flex flex-row justify-space-between align-center gap-2">
         <div class="d-flex flex-column my-2 gap-1">
             <MudText Typo="Typo.h6">Total passengers on board</MudText>
@@ -73,6 +55,8 @@
 </MudPaper>
 
 @code {
+    [Parameter]
+    public int RouteId { get; set; }
     private int _width = 0;
     private int _height = 0;
     private int scanwith = 650;
@@ -82,17 +66,20 @@
     private string start { get; set; } = "2285 South Federal Blvd";
     private string final { get; set; } = "2160 S Cook Street";
     private string search { get; set; }
-
-    protected override void OnInitialized()
+    private TripReportDto? _tripReport = null;
+    protected override async Task OnInitializedAsync()
     {
-
+        await LoadRoute();
+    }
+    private async Task LoadRoute()
+    {
+        _tripReport = await Mediator.Send(new GetTripReportByIdQuery() { Id = RouteId });
     }
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         if (firstRender)
         {
             await BrowserViewportService.SubscribeAsync(this, fireImmediately: true);
-
             await InvokeAsync(StateHasChanged);
         }
     }
